[gd_scene load_steps=7 format=3 uid="uid://bw4rse7gdvqsp"]

[ext_resource type="Script" uid="uid://boq88qlf4ql22" path="res://objects/obj_flask_dispenser.gd" id="1_af1x6"]
[ext_resource type="Texture2D" uid="uid://cmo478swq2xgw" path="res://sprites/sprFlashDispenserPink.png" id="2_vtd4a"]
[ext_resource type="Texture2D" uid="uid://djnjc0pcqjgdf" path="res://sprites/sprFlaskDispenserPinkRight.png" id="3_uld02"]

[sub_resource type="SpriteFrames" id="SpriteFrames_246il"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vtd4a")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_uld02")
}],
"loop": true,
"name": &"side",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pj7se"]
size = Vector2(4, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p86q8"]
size = Vector2(18, 18)

[node name="objFlaskDispenser" type="Area2D"]
script = ExtResource("1_af1x6")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_246il")
animation = &"down"

[node name="side_shape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_pj7se")
disabled = true

[node name="down_shape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_p86q8")

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
